--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/ensuring_target.css">
+<link rel="stylesheet" href="css/ensuring_target.css?rev=ffdgfgdgfdgfd">
 <div class="target_ctrl">
 	<div class="who">为谁投保？</div>
 	<div class="first">建议优先保障家庭收入最高者</div>
