--- a/app/css/ensuring_target.css
+++ b/app/css/ensuring_target.css
@@ -2,7 +2,7 @@
 body {
   background: #f5f5f5; }
 .target_ctrl {
-  padding: 10px 60px;
+  padding: 20px 60px;
   color: #555;
   text-align: center; }
   .target_ctrl .who {
@@ -22,9 +22,9 @@ body {
     flex-wrap: wrap; }
     .target_ctrl .relation .btn {
       margin: 0 auto;
-      width: 1.16rem;
-      height: 1.16rem;
-      line-height: 1.16rem;
+      width: 90px;
+      height: 90px;
+      line-height: 90px;
       background: #fff;
       border: 1px solid #e2e2e2;
       border-radius: 50%;
