--- a/app/sass/ensuring_target.scss
+++ b/app/sass/ensuring_target.scss
@@ -2,7 +2,7 @@
 @import "base/variables.scss";
 body {background: #f5f5f5;}
 .target_ctrl {
-	padding: 10px 60px;
+	padding: 20px 60px;
 	color: #555;
 	text-align: center;
 	.who {font-size: 18px;}
@@ -10,29 +10,10 @@ body {background: #f5f5f5;}
 	.relation {margin-top: 40px;
 		@include flexbox;
 		@include  flex-wrap(wrap);
-		.btn {margin: 0 auto;width: 1.16rem;height: 1.16rem;line-height: 1.16rem; background: #fff;border: 1px solid #e2e2e2;border-radius: 50%;box-sizing: border-box;margin-bottom: 20px;}
+		.btn {margin: 0 auto;width: 90px;height: 90px;line-height: 90px; background: #fff;border: 1px solid #e2e2e2;border-radius: 50%;box-sizing: border-box;margin-bottom: 20px;}
 		.blue {color: #fff;background: #55a5ff;}
 	}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	.target_btn {position: fixed;left: 0;bottom: 0;width: 100%;height: 49px;background: #006ee9;color: #fff;text-align: center;line-height: 49px;font-size: 15px;border-top: 1px solid #ccc;}
-
 }
 
 
