--- a/app/css/userinfo.css
+++ b/app/css/userinfo.css
@@ -176,8 +176,11 @@ box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
 }
 .age-container .high span {
 	position: absolute;
-	left: -7px;
+	left: -11px;
 	top: 30px;
+	text-align: center;
+	width:21px;
+	display: inline-block;
 }
 .bg-container {
 	width: 5000px;
