--- a/app/sass/bz_ts.scss
+++ b/app/sass/bz_ts.scss
@@ -61,9 +61,9 @@
 			// 	bottom: 0;
 			// }
 		}
-		.head_right:active {
-			background: #f5f5f5;
-		}
+		// .head_right:active {
+		// 	background: #f5f5f5;
+		// }
 	}
 	.promote_main {
 	padding-left: 20px;
