--- a/app/sass/userinfo_new.scss
+++ b/app/sass/userinfo_new.scss
@@ -10,8 +10,8 @@
 
  	.sex {margin: 20px 0 20px 0;color: #999;line-height: 15px;}
  	.age {margin: 25px 0 14px;color: #999;line-height: 15px;}
- 	#yearIncome {margin-top:25px;}
- 	.blue {color: #55a5ff;font-size: 18px;font-weight: bold;margin-left: 10px;}
+ 	// #yearIncome {margin-top:25px;}
+ 	.blue {color: #55a5ff;font-size: 17px;font-weight: bold;margin-left: 10px;}
 .switch {
 	position: relative;
 	display: block;
