--- a/app/sass/ensuring_target.scss
+++ b/app/sass/ensuring_target.scss
@@ -2,14 +2,16 @@
 @import "base/variables.scss";
 body {background: #f5f5f5;}
 .target_ctrl {
-	padding: 20px 60px;
+	padding: 20px .77rem;
 	color: #555;
 	text-align: center;
 	.who {font-size: 18px;}
 	.first {color: #999;font-size: 13px;}
 	.relation {margin-top: 40px;
 		@include flexbox;
-		@include  flex-wrap(wrap);
+		// @include  flex-wrap(wrap);
+		@include justify-content(space-between);
+		.column {-webkit-justify-content: space-between;@include flex-direction(column);}
 		.btn {margin: 0 auto;width: 90px;height: 90px;line-height: 90px; background: #fff;border: 1px solid #e2e2e2;border-radius: 50%;box-sizing: border-box;margin-bottom: 20px;}
 		.blue {color: #fff;background: #55a5ff;}
 	}
