simple auto commit

--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -73,7 +73,7 @@
 		<a href="javascript:void(0)" class="btn btn_n_primary right" id="showMask"   ng-click="showMask()" >立即投保</a>
 		<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr" >
 			<span>{{plan.name }}</span>&nbsp;
-			<span class="money_size">{{money | number}}</span>元<span ng-show="plan.premium_type==2">起</span>
+			<span class="money_size">{{detailMoney | number}}</span>元<span ng-show="plan.premium_type==2">起</span>
 		</a>
 	</div>
 </div>
