--- a/app/partials/userinfo.html
+++ b/app/partials/userinfo.html
@@ -22,7 +22,7 @@
 </div>
 
 
-<script type="text/javascript" src="js/ageComponent.js?rev=asafafaasdfafasfwsdasafafa"></script>
+<script type="text/javascript" src="js/AgeComponent.js?rev=asafafaasdfafasfwsdasafafa"></script>
 <script type="text/javascript">
 
  var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18,changeCallback:function(age){
