--- a/app/css/toubao_new.css
+++ b/app/css/toubao_new.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 * {
   box-sizing: border-box; }
+input[type="date"]::-webkit-clear-button {
+  -webkit-appearance: none;
+  display: none; }
 body {
   background-color: #f5f5f5; }
 .toubao_new_ctrl {
