simple auto commit

--- a/app/wx_share/partials/exchange.html
+++ b/app/wx_share/partials/exchange.html
@@ -24,7 +24,7 @@
 				<div class="kuang">
 					<ul></ul>
                     <ul>
-                    	<li><span>我的保险劵<span></li>
+                    	<li><span>我的保险劵</span></li>
 					  	<li>我的保单</li>
 					 	<li>联系我们</li> 
 				 		<img class="shou" src="wx_share/img/shou.png">
