--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/scheme.css">
+<link rel="stylesheet" href="css/scheme.css?rev=a37178e04a14eab9c745676eac4e2907">
 <div class="scheme-contrller">
 	
 	<div class="main-contrller">
