--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -198,7 +198,8 @@ $(function(){
 	
 		// });
 	$('.close').on('click', function(e){
-			$('.mask').hide();
+		$('.mask').hide();
+		_hmt.push(['_trackEvent', 'temai_detail', 'temai_detail_hideMask']);
 	});
 
 /*
