--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -87,7 +87,8 @@
 
 	<div class="tip">
 		<input type="checkbox" class="know-contract" ng-model="know_contract" name="know_contract"  >
-		我已经阅读<a href="/ybwx-web/api/web_page/15">《平台服务协议》</a>及<a href="javascript:" ng-click="goTermsList()">《产品条款》</a>
+			
+		我已经阅读<a onclick="_hmt.push(['_trackEvent', 'toubaonew', 'toubaonew_goXieyi'])" href="/ybwx-web/api/web_page/15">《平台服务协议》</a>及<a href="javascript:" ng-click="goTermsList()">《产品条款》</a>
 	</div>
 	</form>
 </div>
