--- a/app/css/bz_ts.css
+++ b/app/css/bz_ts.css
@@ -27,7 +27,7 @@
     .promote_ctrl .head_ctrl .head_left .head_state {
       font-size: 12px;
       color: #97c8ff;
-      margin-top: 20px; }
+      margin-top: 15px; }
   .promote_ctrl .head_ctrl .head_right {
     float: right;
     height: 108px;
@@ -39,7 +39,7 @@
     position: relative;
     text-align: center;
     box-sizing: border-box;
-    padding-top: 70px;
+    padding-top: 67px;
     font-weight: 500; }
 .promote_ctrl .promote_main {
   padding-left: 20px; }
@@ -50,7 +50,7 @@
     display: -ms-flexbox;
     display: flex;
     overflow: auto;
-    padding: .233rem 20px .232rem 0;
+    padding: .20rem 20px .20rem 0;
     border-bottom: 1px solid #e2e2e2; }
     .promote_ctrl .promote_main .main_word .logo_ctrl {
       width: 30px;
@@ -75,6 +75,8 @@
       flex: 1;
       background: url(../img/jiantou.png) no-repeat right center;
       background-size: 7.5px; }
+  .promote_ctrl .promote_main .main_word:active {
+    background: #ccc; }
   .promote_ctrl .promote_main .main2 {
     height: 73px; }
   .promote_ctrl .promote_main .main3 {
