--- a/app/css/ensuring_target.css
+++ b/app/css/ensuring_target.css
@@ -2,16 +2,19 @@
 body {
   background: #f5f5f5; }
 .target_ctrl {
-  padding: 20px .77rem;
+  padding: .258rem 0;
   color: #555;
   text-align: center; }
   .target_ctrl .who {
-    font-size: 18px; }
+    font-size: 18px;
+    padding: 0 .77rem; }
   .target_ctrl .first {
     color: #999;
-    font-size: 13px; }
+    font-size: 13px;
+    padding: 0 .77rem; }
   .target_ctrl .relation {
-    margin-top: 40px;
+    width: 204px;
+    margin: 40px auto 0;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -26,7 +29,8 @@ body {
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
       flex-direction: column; }
-    .target_ctrl .relation .btn {
+    .target_ctrl .relation .column_btn {
+      font-size: 17px;
       margin: 0 auto;
       width: 90px;
       height: 90px;
@@ -35,10 +39,11 @@ body {
       border: 1px solid #e2e2e2;
       border-radius: 50%;
       box-sizing: border-box;
-      margin-bottom: 20px; }
+      margin-bottom: 25px; }
     .target_ctrl .relation .blue {
       color: #fff;
-      background: #55a5ff; }
+      background: #55a5ff;
+      border: none; }
   .target_ctrl .target_btn {
     position: fixed;
     left: 0;
