--- a/app/css/userinfo_new.css
+++ b/app/css/userinfo_new.css
@@ -1,24 +1,25 @@
 @charset "UTF-8";
 body {
-  line-height: normal; }
+  background: #f5f5f5; }
 .userinfo_new {
-  padding: 20px 0;
+  padding: .258rem 0;
   font-size: 15px;
   text-align: center;
+  line-height: normal;
    }
   .userinfo_new .setting {
     font-size: 16px;
     line-height: 16px; }
   .userinfo_new .highest {
     color: #999;
-    margin: 30px 0 10px 0;
+    margin: .32rem 0 .1rem 0;
     line-height: 15px; }
   .userinfo_new .sex {
-    margin: 20px 0 20px 0;
+    margin: .3rem 0 .1rem 0;
     color: #999;
     line-height: 15px; }
   .userinfo_new .age {
-    margin: 25px 0 14px;
+    margin: .4rem 0 .1rem;
     color: #999;
     line-height: 15px; }
   .userinfo_new .blue {
