--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -1,23 +1,22 @@
-<link rel="stylesheet" href="css/ensuring_target.css?rev=ffdgfgdgfdgfd">
+<link rel="stylesheet" href="css/ensuring_target.css?rev=713a559efce57f259c7f8a78862b3e23">
 <div class="target_ctrl">
 	<div class="who">为谁投保？</div>
 	<div class="first">建议优先保障家庭收入最高者</div>
 	<div class="relation" id="relation">
 		<div class="column">
-			<div class="btn blue">自 己</div>
-		    <div class="btn">配 偶</div>
+			<div class="column_btn blue">自 己</div>
+		    <div class="column_btn">配 偶</div>
 		</div>
 		<div class="column">
-			<div class="btn">父 母</div>
-			<div class="btn">子 女</div>
+			<div class="column_btn">父 母</div>
+			<div class="column_btn">子 女</div>
 		</div>
-		
 	</div>
 	<div class="target_btn" ng-click="goUserInfoNew()">下一步</div>
 </div>
 <script>
-	$("#relation .column .btn").click(function() {
-			$("#relation").find(".btn").removeClass("blue");
+	$("#relation .column .column_btn").click(function() {
+			$("#relation").find(".column_btn").removeClass("blue");
 			$(this).addClass("blue");
 			$(this).html();
 			console.log($(this).html());
