--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" href="css/userinfo.css">
-<link rel="stylesheet" href="css/userinfo_new.css">
+<link rel="stylesheet" href="css/userinfo_new.css?rev=da412b77aabef9c9eac2d32ffac6e725">
 <div class="userinfo_new"> 
 	<div class="setting">设定被保人资料</div> 
 	<div class=" highest">是否是家庭中收入最高</div>
