--- a/app/sass/bz_ts.scss
+++ b/app/sass/bz_ts.scss
@@ -38,7 +38,7 @@
 			.head_state {
 				font-size: 12px;
 	            color: #97c8ff;
-	            margin-top: 20px;
+	            margin-top: 15px;
 			}
 		}
 		.head_right {
@@ -52,7 +52,7 @@
 			position: relative;
 			text-align: center;
 			box-sizing: border-box;
-			padding-top: 70px;
+			padding-top: 67px;
 			font-weight: 500;
 			// line-height: 95px;
 			// .word-circle {
@@ -70,7 +70,7 @@
 		.main_word {
 			@include flexbox;
 			overflow: auto;
-			padding: .233rem 20px .232rem 0;
+			padding: .20rem 20px .20rem 0;
 			border-bottom: 1px solid #e2e2e2;
 			.logo_ctrl {
 				width: 30px;
@@ -96,6 +96,9 @@
 				background: url(../img/jiantou.png) no-repeat right center;
 				background-size: 7.5px;
 			}
+		}
+		.main_word:active {
+			background: #ccc;
 		}
 		.main2 {
 			height: 73px;
