--- a/app/sass/ensuring_target.scss
+++ b/app/sass/ensuring_target.scss
@@ -2,18 +2,21 @@
 @import "base/variables.scss";
 body {background: #f5f5f5;}
 .target_ctrl {
-	padding: 20px .77rem;
+	padding: .258rem 0;
 	color: #555;
 	text-align: center;
-	.who {font-size: 18px;}
-	.first {color: #999;font-size: 13px;}
-	.relation {margin-top: 40px;
+	.who {font-size: 18px;padding: 0 .77rem;}
+	.first {color: #999;font-size: 13px;padding: 0 .77rem;}
+	.relation {
+		width: 204px;
+		// margin-top: 40px;
+		margin: 40px auto 0;
 		@include flexbox;
 		// @include  flex-wrap(wrap);
 		@include justify-content(space-between);
 		.column {-webkit-justify-content: space-between;@include flex-direction(column);}
-		.btn {margin: 0 auto;width: 90px;height: 90px;line-height: 90px; background: #fff;border: 1px solid #e2e2e2;border-radius: 50%;box-sizing: border-box;margin-bottom: 20px;}
-		.blue {color: #fff;background: #55a5ff;}
+		.column_btn {font-size: 17px;margin: 0 auto;width: 90px;height: 90px;line-height: 90px; background: #fff;border: 1px solid #e2e2e2;border-radius: 50%;box-sizing: border-box;margin-bottom: 25px;}
+		.blue {color: #fff;background: #55a5ff;border:none;}
 	}
 	.target_btn {position: fixed;left: 0;bottom: 0;width: 100%;height: 49px;background: #006ee9;color: #fff;text-align: center;line-height: 49px;font-size: 15px;border-top: 1px solid #ccc;}
 }
