--- a/app/sass/preference.scss
+++ b/app/sass/preference.scss
@@ -6,12 +6,12 @@ body {background: #f5f5f5;line-height: normal;}
 	color: #555;
 	font-size: 15px;
 	text-align: center;
-	.piont {color: #999;margin-bottom: 10px;}
+	.piont {margin-bottom: 10px;}
 	.trouble {margin: 20px 0 10px 0;}
-	.select {color: #999;font-size: 13px;margin-bottom: 15px;}
+	.select {color: #999;font-size: 13px;line-height: 13px;margin-bottom: 15px;}
 	.relation {
 		.btn_ctrl {
-			img {width: 15px;display: none;vertical-align: 20px;position: absolute; left: -30px;top: 25%;}
+			img {width: 15px;display: none;position: absolute; left: -25px;top: 30%;}
 		}
 		.hobby_btn {
 			position:relative;
