--- a/app/sass/userinfo_new.scss
+++ b/app/sass/userinfo_new.scss
@@ -1,15 +1,16 @@
  @import "base/classes.scss";
  @import "base/variables.scss";
- body {line-height: normal;}
+ body {background: #f5f5f5;}
  .userinfo_new {
- 	padding: 20px 0;
+ 	padding: .258rem 0;
  	font-size: 15px;
  	text-align: center;
+ 	line-height: normal;
  	.setting {font-size: 16px;line-height: 16px;}
- 	.highest {color: #999;margin: 30px 0 10px 0;line-height: 15px;}
+ 	.highest {color: #999;margin: .32rem 0 .1rem 0;line-height: 15px;}
 
- 	.sex {margin: 20px 0 20px 0;color: #999;line-height: 15px;}
- 	.age {margin: 25px 0 14px;color: #999;line-height: 15px;}
+ 	.sex {margin: .3rem 0 .1rem 0;color: #999;line-height: 15px;}
+ 	.age {margin: .4rem 0 .1rem;color: #999;line-height: 15px;}
  	// #yearIncome {margin-top:25px;}
  	.blue {color: #55a5ff;font-size: 17px;font-weight: bold;margin-left: 10px;}
 .switch {
