simple auto commit

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=b8e462a50724544c91214ff0fde0fc63">
+<!-- <link rel="stylesheet" href="wx_share/css/index.css?rev=10ee93e35caeab6c5d3d7b887c5c5efb"> -->
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
