--- a/app/wx_share/partials/success_coupon.html
+++ b/app/wx_share/partials/success_coupon.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/success_coupon.css?rev=d35495d4589f78e7b145a1588c08a2af">
+<!-- <link rel="stylesheet" href="wx_share/css/success_coupon.css?rev=d35495d4589f78e7b145a1588c08a2af"> -->
 <link rel="stylesheet" type="text/css" href="css/pay_success.css">
 <div class="pay_success_ctrl">
 	<div class="win">
