--- a/app/wx_share/partials/success_part.html
+++ b/app/wx_share/partials/success_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/success.css?rev=6e97a399828e58bb82322270b3027757">
+<!-- <link rel="stylesheet" href="wx_share/css/success.css?rev=6e97a399828e58bb82322270b3027757"> -->
 <div id="wrapper" class="wrapper ">
 	<div class="success_part_contrl">
 		<ul class="layout ul_contrl">
