--- a/app/wx_share/partials/shenhe_special.html
+++ b/app/wx_share/partials/shenhe_special.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/special_offer.css?rev=7ddcb904c4d52d85725adf425202ce52">
+<!-- <link rel="stylesheet" href="wx_share/css/special_offer.css?rev=7ddcb904c4d52d85725adf425202ce52"> -->
 <div class="special_offer_ctrl"  data-ng-init="init()">
 	<div class="special_main">
 		<img src="wx_share/img/special/special_back_small.png" srcset="wx_share/img/special/special_back_small.png 568w, wx_share/img/special/special_back_big.png 667w, wx_share/img/special/special_back_big.png 736w">
