simple auto commit

--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -122,7 +122,7 @@ body{
 		<img src="img/back_crad.jpg" class="union_logo"/>
 		银行卡快捷
 	</div>
-	<form action="https://pay.ipaynow.cn" method="POST"  role="form" id="wechatPayForm" style="display:none" >
+	<form action="https://payment.ipaynow.cn" method="POST"  role="form" id="wechatPayForm" style="display:none" >
 		功能码：
 		<input  type=text name="funcode" value="{{ipaynow_pay_request.funcode}}" readonly/>
 		应用ID:
