simple auto commit

--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -105,7 +105,8 @@
 </div>
 <div class="qrcode-wrapper">
 	<div class="qrcode-container" >
-		<img src="img/temai/qcode_big.png" srcset="img/temai/qcode_min.png 568w, img/temai/qcode_big.png 667w, img/temai/qcode_big.png 736w">	
+		<!-- <img src="img/temai/qcode_big.png" srcset="img/temai/qcode_min.png 568w, img/temai/qcode_big.png 667w, img/temai/qcode_big.png 736w">	 -->
+		 <img src="img/temai/new_qrcode.png" >	 
 	</div>
 </div>
 <script>
