--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -55,7 +55,7 @@
 	<div class="ku" id="popup"></div>
 	<div class="popup_box">
 		<div style="position:relative;">
-			<img id="popup-img"  src="wx_share/img/my_bd/mask.png">
+			<img id="popup-img"  src="wx_share/img/my_bd/newmask.png">
 		    <div class="popup_btn" id="popup-btn"><img src="wx_share/img/my_bd/mask_btn.png" ></div>
 		</div>
 	</div>
