--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -36,7 +36,7 @@
 				</div>
 				<!-- 二维码 -->
 				<div class="two_code">
-					<img src="wx_share/img/sports/two_code.jpg">
+					<img  src="wx_share/img/special/wechat-qrcode.png">
 				</div>
 	        </div>
 			
@@ -75,7 +75,8 @@
 	<div class="ku" id="popup"></div>
 	<div class="popup_box">
 		<div style="position:relative;">
-			<img id="popup-img"  src="wx_share/img/sports/popup_1.png" srcset="wx_share/img/sports/popup_1.png 568w, wx_share/img/sports/popup_2.png 667w, wx_share/img/sports/popup_2.png 736w">
+			<!-- <img id="popup-img"  src="wx_share/img/sports/popup_1.png" srcset="wx_share/img/sports/popup_1.png 568w, wx_share/img/sports/popup_2.png 667w, wx_share/img/sports/popup_2.png 736w"> -->
+			 <img id="popup-img"  src="wx_share/img/sports/new_popup.png" >
 		    <div class="popup_btn" id="popup-btn"><img src="wx_share/img/sports/sports_popup_btn1.png" ></div>
 		</div>
 	</div>
