--- a/app/wx_share/partials/special_offer.html
+++ b/app/wx_share/partials/special_offer.html
@@ -29,7 +29,7 @@
 				<p>2.购买后在 [ 诺贝 ] 公众号查看保单(右侧二维码)</p>
 				<p>3.有效期：2016.07.21 ~ 12.21</p>
 			</div>
-				<img class="two_code " src="wx_share/img/special/two_code.jpg">
+				<img class="two_code "  src="wx_share/img/special/wechat-qrcode.png">
         </div>
         <div class="bottom_Message">关注 [ 诺贝 ] 公众号更有免费航班延误险等你来拿</div>
 	</div>
