--- a/app/wx_share/partials/shenhe_special.html
+++ b/app/wx_share/partials/shenhe_special.html
@@ -17,7 +17,7 @@
 				<p>1.购买后在 [ 诺贝 ] 公众号查看保单(右侧二维码)</p>
 				<p>2.有效期：2016.07.21 ~ 12.21</p>
 			</div>
-				<img class="two_code " src="wx_share/img/special/two_code.jpg">
+				<img class="two_code " src="wx_share/img/special/wechat-qrcode.png">
         </div>
 	</div>
 </div>
