simple auto commit

--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -155,6 +155,8 @@ body{
 		数字签名：
 		<input  style="display:none"  type=text name="mhtSignature" value="{{ipaynow_pay_request.mhtSignature}}" readonly/>
 
+		<input    type=text name=" payChannelType" value="13" readonly/>
+
 	</form>
 </div>
 
