simple auto commit

--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -150,6 +150,9 @@ body{
 		<input    type=text name="mhtCharset" value="{{ipaynow_pay_request.mhtCharset}}" readonly/>
 		设备类型：
 		<input    type=text name="deviceType" value="{{ipaynow_pay_request.deviceType}}" readonly/>
+
+		<input   type=text name="payChannelType" value="{{ipaynow_pay_request.payChannelType}}" readonly/>
+		
 		签名类型：
 		<input   style="display:none"  type=text name="mhtSignType" value="{{ipaynow_pay_request.mhtSignType}}" readonly/>
 		数字签名：
