--- a/app/partials/pay_success.html
+++ b/app/partials/pay_success.html
@@ -19,4 +19,4 @@
 		<img src="img/tishi.jpg">
 	</div> -->
 </div>
-<div class="main"> <img src="img/win_hint/main.jpg"></div>
+<div class="main"> <img src="img/win_hint/new_main.png"></div>
