simple auto commit

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -40,7 +40,7 @@
 				<p>3.有效期：2016.06.24 ~ 12.24</p>
 			</div>
 			<div class="two_code right">
-				<img src="wx_share/img/my_bd/erweima.jpg">
+				<img src="wx_share/img/my_bd/newqrcode.png">
 			</div>
         </div>
 	</div>
