--- a/app/partials/update_add_contact.html
+++ b/app/partials/update_add_contact.html
@@ -9,7 +9,8 @@
 			<div class="bottom_line">
 				<ul>
 					<li class="lable">姓名</li>
-					<input type="text" ng-model="username"  name="username" onfocus="this.placeholder=''" onblur="this.placeholder='请输入被保人姓名'" placeholder="请输入被保人姓名" required chinese >
+			
+					<input type="text" onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_name'])" ng-model="username"  name="username" onfocus="this.placeholder=''" onblur="this.placeholder='请输入被保人姓名'" placeholder="请输入被保人姓名" required chinese >
 			    </ul>
 			    <div class="cell"  style="color:red" ng-show="userform.username.$dirty && userform.username.$invalid">
 					<small class="error" ng-show="userform.username.$error.required">姓名必填</small>
@@ -19,7 +20,7 @@
 			
 			<div class="bottom_line">
 				<ul>
-					<li>身份证号</li><input type="text" ng-model="social_id" name="social_id" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的身份证号'" placeholder="请输入被保人身份证号" required  ng-minlength="18" ng-maxlength="18" >
+					<li>身份证号</li><input type="text"  onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_id'])" ng-model="social_id" name="social_id" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的身份证号'" placeholder="请输入被保人身份证号" required  ng-minlength="18" ng-maxlength="18" >
 				</ul>
 				<div class="cell"  style="color:red" ng-show="userform.social_id.$dirty && userform.social_id.$invalid ">
 						<small class="error" ng-show="userform.social_id.$error.required">身份证必填</small>
@@ -29,7 +30,7 @@
 		    </div>
 			<div class="bottom_line">
 				<ul>
-					<li>手机号码</li><input type="text" ng-model="mobile" name="mobile" placeholder="用于接收保单信息" ng-minlength="11" ng-maxlength="11" required >
+					<li>手机号码</li><input type="text" onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_number'])" ng-model="mobile" name="mobile" placeholder="用于接收保单信息" ng-minlength="11" ng-maxlength="11" required >
 				</ul>
 				<div class="cell"  style="color:red" ng-show="userform.mobile.$dirty && userform.mobile.$invalid ">
 					<small class="error" 
@@ -45,7 +46,7 @@
 			<li>他是您的</li>
 		
 			
-			<select id="relation" ng-model="relation"   ng-options="option.name for option in relations track by option.id" >
+			<select id="relation" onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_ralation'])" ng-model="relation"   ng-options="option.name for option in relations track by option.id" >
 					
 					
 			<!-- 	<option value="1" selected="selected">本人</option>
