--- a/app/partials/yixiangsu.html
+++ b/app/partials/yixiangsu.html
@@ -1,16 +1,22 @@
-<link rel="stylesheet" href="css/yixiangsu.css?rev=e0edbf2f19b464e14e2f47d19de8ee25">
+<link rel="stylesheet" href="css/yixiangsu.css?rev=sadsaasdsa">
 
 
 
-<div >
+<div class="box1">
 	div
+</div >
+<div class="box2">
+	
+</div>
+<div class="box3">
+	
 </div>
 <!-- <form>
 	<table>
 		<tr>s
 			<td>td</td>
 		</tr>
-	</table>
+	</table>fhgjdfgjfdh
 </form> -->
-<p>ppppp</p>
-<span>span</span>
+<!-- <p>ppppp</p>
+<span>span</span> -->
