--- a/app/css/index_part.css
+++ b/app/css/index_part.css
@@ -66,6 +66,8 @@ body {
 .cell-circle:active {
   background-color: #f5f5f5; }
 .mag-container {
-  margin-top: 1rem; }
+  position: fixed;
+  left: 0;
+  bottom: 70px; }
 .select_btn {
   box-sizing: border-box; }
