--- a/app/css/yixiangsu.css
+++ b/app/css/yixiangsu.css
@@ -1,103 +1,13 @@
 @charset "UTF-8";
-div {
+.box1 {
   height: 100px;
-  position: relative;
   width: 100%;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 99; }
-  div::after {
-    pointer-events: none;
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    content: "\0020";
-    border-color: red;
-    border-style: solid;
-    border-width: 0 0 1px 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0; }
-    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      div::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5); } }
-    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      div::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(1/3);
-        transform: scale(1/3); } }
-td {
-  height: 30px;
-  background: blue;
+  border-bottom: 1px solid #ccc; }
+.box2 {
+  height: 10px;
+  width: 100%;
   position: relative; }
-  td::after {
-    pointer-events: none;
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    content: "\0020";
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0; }
-    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      td::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5); } }
-    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      td::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(1/3);
-        transform: scale(1/3); } }
-p {
-  height: 100px;
-  background: yellow;
-  position: relative; }
-  p::after {
-    pointer-events: none;
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    content: "\0020";
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0; }
-    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      p::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5); } }
-    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      p::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(1/3);
-        transform: scale(1/3); } }
-span {
-  height: 50px;
-  display: block;
-  position: relative; }
-  span::after {
+  .box2::after {
     pointer-events: none;
     position: absolute;
     z-index: 999;
@@ -106,20 +16,38 @@ span {
     content: "\0020";
     border-color: #ccc;
     border-style: solid;
-    border-width: 1px;
+    border-width: 0 0 1px 0;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0; }
     @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      span::after {
+      .box2::after {
         width: 200%;
         height: 200%;
         -webkit-transform: scale(0.5);
         transform: scale(0.5); } }
     @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      span::after {
+      .box2::after {
         width: 200%;
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
+.box3 {
+  position: relative;
+  border: none;
+  height: 10px; }
+.box3:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid #ccc;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 200%;
+  height: 200%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  -webkit-transform-origin: left top;
+  transform-origin: left top; }
