--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -14,7 +14,7 @@
    <!--  -->
 
 
-  <div calss="mag-container" style="margin-top:0.1rem;">
+  <div calss="mag-container" style="position: fixed;left:0;bottom: 80px;">
        <div class="cell_hd cell_primary">
              <div class="cell-circle " ng-click="goBdMange()"><i class="iconfont" style="color:#99b8de">&#xe600;</i><div>保单管理</div></div>
        </div>
