--- a/app/sass/index_part.scss
+++ b/app/sass/index_part.scss
@@ -88,7 +88,10 @@ body {
   background-color: #f5f5f5;
 }
  .mag-container{
-    margin-top:1rem;
+    // margin-top:1rem;
+    position: fixed;
+    left:0;
+    bottom: 70px;
  }
 .select_btn {
   box-sizing: border-box;
