--- a/app/css/toubao_new.css
+++ b/app/css/toubao_new.css
@@ -96,6 +96,15 @@ body {
     font-size: 14px;
     border-bottom: 1px solid #e2e2e2;
     margin-bottom: 8px; }
+  .supply-info .description {
+    padding: 15px 10px;
+    color: #999; }
+  .supply-info .new-title {
+    padding: 10px; }
+    .supply-info .new-title .s-title {
+      color: #555; }
+    .supply-info .new-title .s-des {
+      color: #999; }
   .supply-info .supply-item {
     display: -webkit-box;
     display: -webkit-flex;
@@ -107,7 +116,7 @@ body {
     line-height: 45px;
     margin-bottom: 10px; }
     .supply-info .supply-item .introd {
-      width: 60px; }
+      width: 70px; }
     .supply-info .supply-item .content {
       padding-right: 10px;
       -webkit-box-flex: 1;
@@ -119,6 +128,155 @@ body {
     .supply-info .supply-item .ipt {
       border: 1px solid #e2e2e2;
       height: 45px; }
+    .supply-info .supply-item .new-input {
+      width: 100%;
+      line-height: 2.33;
+      outline: 0;
+      background-color: transparent;
+      -webkit-appearance: none;
+      height: 45px;
+      border: none; }
+    .supply-info .supply-item .new-input::-webkit-input-placeholder {
+      color: #ccc; }
+    .supply-info .supply-item .danwei {
+      color: #ccc;
+      text-align: left;
+      width: 35px; }
+  .supply-info .new-supply-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0 10px;
+    height: 45px;
+    line-height: 45px;
+    margin-bottom: 10px; }
+    .supply-info .new-supply-item .introd {
+      width: 70px;
+      position: relative; }
+      .supply-info .new-supply-item .introd::after {
+        pointer-events: none;
+        position: absolute;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        content: "\0020";
+        border-color: #e2e2e2;
+        border-style: solid;
+        border-width: 0 0 1px 0;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0; }
+        @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+          .supply-info .new-supply-item .introd::after {
+            width: 200%;
+            height: 200%;
+            -webkit-transform: scale(0.5);
+            transform: scale(0.5); } }
+        @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+          .supply-info .new-supply-item .introd::after {
+            width: 200%;
+            height: 200%;
+            -webkit-transform: scale(1/3);
+            transform: scale(1/3); } }
+    .supply-info .new-supply-item .content {
+      padding-right: 10px;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -moz-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      position: relative; }
+      .supply-info .new-supply-item .content::after {
+        pointer-events: none;
+        position: absolute;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        content: "\0020";
+        border-color: #e2e2e2;
+        border-style: solid;
+        border-width: 0 0 1px 0;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0; }
+        @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+          .supply-info .new-supply-item .content::after {
+            width: 200%;
+            height: 200%;
+            -webkit-transform: scale(0.5);
+            transform: scale(0.5); } }
+        @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+          .supply-info .new-supply-item .content::after {
+            width: 200%;
+            height: 200%;
+            -webkit-transform: scale(1/3);
+            transform: scale(1/3); } }
+    .supply-info .new-supply-item .new-input {
+      width: 100%;
+      line-height: 2.33;
+      outline: 0;
+      background-color: transparent;
+      -webkit-appearance: none;
+      height: 45px;
+      border: none; }
+    .supply-info .new-supply-item .new-input::-webkit-input-placeholder {
+      color: #ccc; }
+    .supply-info .new-supply-item .danwei {
+      color: #ccc;
+      text-align: left;
+      width: 35px;
+      position: relative; }
+      .supply-info .new-supply-item .danwei::after {
+        pointer-events: none;
+        position: absolute;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        content: "\0020";
+        border-color: #e2e2e2;
+        border-style: solid;
+        border-width: 0 0 1px 0;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0; }
+        @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+          .supply-info .new-supply-item .danwei::after {
+            width: 200%;
+            height: 200%;
+            -webkit-transform: scale(0.5);
+            transform: scale(0.5); } }
+        @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+          .supply-info .new-supply-item .danwei::after {
+            width: 200%;
+            height: 200%;
+            -webkit-transform: scale(1/3);
+            transform: scale(1/3); } }
+  .supply-info .wrong-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0 10px;
+    height: 25px;
+    line-height: 25px;
+    margin-bottom: 10px;
+    color: red; }
+    .supply-info .wrong-item .introd {
+      width: 60px; }
+    .supply-info .wrong-item .content {
+      padding-right: 10px;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -moz-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+       }
 .tip {
   padding-left: 10px;
   height: 70px;
