--- a/app/partials/service.html
+++ b/app/partials/service.html
@@ -17,7 +17,7 @@
 
 <div class="service-container">
 	<div class="service-item"  ng-click="goContact()">  <div><div class="icon"><i class="iconfont"  style="color:#00be7d;">&#xe615;</i></div><div class="text">联系我们</div></div></div>
-	<div class="service-item" ><a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=407057806&idx=1&sn=d6136f57ac70f0ae4504c657355a6989#wechat_redirect" style="color:#555;">   <div style="text-align: center;"><div class="icon"><i class="iconfont"  style="color:#37adff;">&#xe616;</i></div><div class="text">关于诺贝</div></div></a></div>
+	<div class="service-item" ng-click="goNuobei()"><div style="text-align: center;"><div class="icon"><i class="iconfont"  style="color:#37adff;">&#xe616;</i></div><div class="text">关于诺贝</div></div></div>
 	<div class="service-item">  <div></div></div>
 </div>
 
