--- a/app/partials/yixiangsu.html
+++ b/app/partials/yixiangsu.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/yixiangsu.css?rev=sadsaasdsa">
+<link rel="stylesheet" href="css/yixiangsu.css?rev=6b1c70fd78876b01476e1025f6a6732b">
 
 
 
