--- a/app/partials/key_solution.html
+++ b/app/partials/key_solution.html
@@ -2,7 +2,7 @@
 	<div class="toast" id="stopPro"></div>
 </div>
 
-<div class="solution-container"  cg-busy="solutionPromise">
+<div class="solution-container"  cg-busy="solutionPromise" data-ng-init="init()">
 <div class="key_head">
 	<div class="model"><img src="img/scheme/dun.png"> 潇洒哥型保障方案<div class="anew">重新设定</div></div>
 	<div class="wz">25~45岁男性<br/>年收入30万  非家庭支柱<br/></div>
@@ -12,14 +12,48 @@
 <div class="table-wrapper" id="coverage_table"  data-ng-init="init()">
     
 	<table class="table">
-		<tr ng-repeat="coverage in data.mainCoverages"   style="display: none"  on-finish-render="ngRepeatFinished"><td  class="left-td" des="{{coverage.description}}"><div>{{coverage.name}}<div class="qa" ng-show="coverage.description"></div></div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>--></td><td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td></tr>
-		<tr  ng-if="data.secondCoverages.length>0"  style="display: none"><td colspan="2"  style="text-align:left;font-size:15px;font-weight: bold;"><span style="display:inline-block;width: 2px;background:#55a5ff;height: 15px;position:relative;top:2px;left:0;"></span> 次要责任</td></tr>
-		<tr ng-repeat="coverage in data.secondCoverages"  style="display: none"  on-finish-render="ngRepeatFinished"><td  class="left-td" des="{{coverage.description}}"><div>{{coverage.name}}<div class="qa" ng-show="coverage.description"></div></div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>--></td><td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td> </tr>
-		<tr   ng-if="data.escape_coverages.length>0"  style="display: none"><td colspan="2"  style="text-align:left;font-size:15px;font-weight: bold;"><span style="display:inline-block;width: 2px;background:#55a5ff;height: 15px;position:relative;top:0;left:0;"></span> 免除责任</td></tr>
-		<tr ng-repeat="coverage in data.escape_coverages"  style="display: none"  on-finish-render="ngRepeatFinished"><td  class="left-td" des="{{coverage.desc}}"><div>{{coverage.name}}<div class="qa" ng-show="coverage.desc"></div></div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>--></td><td class="right-td"></td></tr>
+		<tr ng-repeat="coverage in data.mainCoverages"   style="display: none"  on-finish-render="ngRepeatFinished">
+			<td  class="left-td" des="{{coverage.description}}">
+				<div>{{coverage.name}}
+					<div class="qa" ng-show="coverage.description"></div>
+				</div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>-->
+			</td>
+			<td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td>
+		</tr>
+		<tr  ng-if="data.secondCoverages.length>0"  style="display: none">
+			<td colspan="2"  style="text-align:left;font-size:15px;font-weight: bold;">
+				<span style="display:inline-block;width: 2px;background:#55a5ff;height: 15px;position:relative;top:2px;left:0;"></span> 
+				次要责任
+			</td>
+		</tr>
+		<tr ng-repeat="coverage in data.secondCoverages"  style="display: none"  on-finish-render="ngRepeatFinished">
+			<td  class="left-td" des="{{coverage.description}}">
+				<div>{{coverage.name}}
+					<div class="qa" ng-show="coverage.description"></div>
+				</div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>-->
+			</td>
+			<td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td> 
+		</tr>
+		<tr ng-if="data.escape_coverages.length>0"  style="display: none">
+			<td colspan="2"  style="text-align:left;font-size:15px;font-weight: bold;">
+				<span style="display:inline-block;width: 2px;background:#55a5ff;height: 15px;position:relative;top:0;left:0;"></span>
+				 免除责任
+			</td>
+		</tr>
+		<tr ng-repeat="coverage in data.escape_coverages"  style="display: none"  on-finish-render="ngRepeatFinished">
+			<td  class="left-td" des="{{coverage.desc}}">
+				<div>{{coverage.name}}
+					<div class="qa" ng-show="coverage.desc"></div>
+				</div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>-->
+			</td>
+			<td class="right-td"></td>
+		</tr>
 	</table>	
 </div>
-	<div class="more" style="display:none" id="more_button"  data-switch='on' ng-click="more($event)"><span>查看更多</span><div class="icon-arrow"></div></div>
+	<div class="more" style="display:none" id="more_button"  data-switch='on' ng-click="more($event)">
+		<span>查看更多</span>
+		<div class="icon-arrow"></div>'
+	</div>
 
 <div class="contents">方案内容</div>
 <ul class="solution">
