--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -122,7 +122,7 @@ body{
 		<img src="img/back_crad.jpg" class="union_logo"/>
 		银行卡快捷
 	</div>
-	<form action="https://api.ipaynow.cn" method="POST"  role="form" id="wechatPayForm" style="display:none" >
+	<form action="https://pay.ipaynow.cn" method="POST"  role="form" id="wechatPayForm" style="display:none" >
 		功能码：
 		<input  type=text name="funcode" value="{{ipaynow_pay_request.funcode}}" readonly/>
 		应用ID:
@@ -150,10 +150,15 @@ body{
 		<input    type=text name="mhtCharset" value="{{ipaynow_pay_request.mhtCharset}}" readonly/>
 		设备类型：
 		<input    type=text name="deviceType" value="{{ipaynow_pay_request.deviceType}}" readonly/>
+
+		<input   type=text name="payChannelType" value="{{ipaynow_pay_request.payChannelType}}" readonly/>
+		
 		签名类型：
 		<input   style="display:none"  type=text name="mhtSignType" value="{{ipaynow_pay_request.mhtSignType}}" readonly/>
 		数字签名：
 		<input  style="display:none"  type=text name="mhtSignature" value="{{ipaynow_pay_request.mhtSignature}}" readonly/>
+
+		
 
 	</form>
 </div>
