--- a/app/sass/scheme.scss
+++ b/app/sass/scheme.scss
@@ -45,7 +45,7 @@
 		.main_word {
 			padding: 20px 30px;
 			background: #fff;
-			// border-bottom: 1px solid #ccc;
+			border-bottom: 1px solid #e2e2e2;
 			.main_top {
 				font-size: 15px;
 				margin-bottom: 5px;
@@ -59,6 +59,9 @@
 				font-size: 13px;
 				line-height: 20px;
 			}
+		}
+		.main_word::last-child {
+			border-bottom: none;
 		}
 	}
 	.main-contrller:before {
