simple auto commit

--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="css/scheme.css?rev=ac0e31e6a2cdafcbd9e52da900c78dce">
-<div class="scheme-contrller" data-ng-init="init()">
+<div class="scheme-contrller" data-ng-init="init()"  cg-busy="schemaPromise">
 	
 	<div class="main-contrller">
 		<div class="scheme-head">{{data.scheme_name}}</div>
