--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -42,11 +42,11 @@
 		</li>
 	</ul>
 
-	<!-- <div class="supply-info" ng-if="data.address || data.car_no || data.destination || data.flight_no "> -->
+	<div class="supply-info" ng-if="data.address || data.car_no || data.destination || data.flight_no ">
 
-	<div class="supply-info" >
+	<!-- <div class="supply-info" > -->
 		<div class="title" >补充信息</div>
-
+<!-- 
  		<div class="new-supply-item" >
 			<div class="introd">身高</div>
 			<div class="content"><input type="text" name="height" ng-model="user.height" class="new-input"  required></div>
@@ -96,7 +96,7 @@
 		<div class="new-supply-item" >
 			<div class="content"><input type="text" name="qcode" ng-model="qcode" class="new-input" placeholder="请填写手机验证码"  required></div>
 			<div class="introd" style="color:#55a5ff">获取验证码</div>
-		</div>
+		</div> -->
 
 
 
