--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/scheme.css?rev=3ef43f5e98b6b4f9e138fa30ec60d670">
+<link rel="stylesheet" href="css/scheme.css?rev=gdfdgfgfghfgh">
 <div class="scheme-contrller" data-ng-init="init()">
 	
 	<div class="main-contrller">
@@ -11,7 +11,7 @@
 	<div class="main-contrller" ng-repeat="item in data.items">
 		<div class="main-head">{{item.insureType}}</div>
 		<div class="main_word" ng-repeat="explains in item.explains">
-			<div class="main_top" ><img src="img/scheme/gou_dun.png"><span class="orange">{{explains.name}}</span>{{explains.title}}</div>
+			<div class="main_top" ><img src="img/scheme/gou_dun.png"><span class="orange" style="margin-right: 10px;">{{explains.name}}</span>{{explains.title}}</div>
 			<div class="zi">{{explains.content}}</div>
 		</div>
 		<div class="marBtn"></div>
