--- a/app/css/bz_ts.css
+++ b/app/css/bz_ts.css
@@ -51,7 +51,33 @@
     display: flex;
     overflow: auto;
     padding: .20rem 20px .20rem 0;
-    border-bottom: 1px solid #e2e2e2; }
+    position: relative; }
+    .promote_ctrl .promote_main .main_word::after {
+      pointer-events: none;
+      position: absolute;
+      z-index: 999;
+      top: 0;
+      left: 0;
+      content: "\0020";
+      border-color: #e2e2e2;
+      border-style: solid;
+      border-width: 0 0 1px 0;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0; }
+      @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        .promote_ctrl .promote_main .main_word::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(0.5);
+          transform: scale(0.5); } }
+      @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+        .promote_ctrl .promote_main .main_word::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(1/3);
+          transform: scale(1/3); } }
     .promote_ctrl .promote_main .main_word .logo_ctrl {
       width: 30px;
       box-sizing: border-box;
