--- a/app/sass/bz_ts.scss
+++ b/app/sass/bz_ts.scss
@@ -71,7 +71,8 @@
 			@include flexbox;
 			overflow: auto;
 			padding: .20rem 20px .20rem 0;
-			border-bottom: 1px solid #e2e2e2;
+			// border-bottom: 1px solid #e2e2e2;
+			@include border(0 0 1px 0,#e2e2e2);
 			.logo_ctrl {
 				width: 30px;
 				box-sizing: border-box;
