--- a/app/sass/ensuring_target.scss
+++ b/app/sass/ensuring_target.scss
@@ -15,7 +15,7 @@ body {background: #f5f5f5;}
 		// @include  flex-wrap(wrap);
 		@include justify-content(space-between);
 		.column {-webkit-justify-content: space-between;@include flex-direction(column);}
-		.column_btn {font-size: 17px;margin: 0 auto;width: 90px;height: 90px;line-height: 90px; background: #fff;border: 1px solid #e2e2e2;border-radius: 50%;box-sizing: border-box;margin-bottom: 25px;}
+		.column_btn {font-size: 17px;margin: 0 auto;width: 90px;height: 90px;line-height: 90px; background: #fff;border:1px solid #e2e2e2;@include border-radius(50%);box-sizing: border-box;margin-bottom: 25px;}
 		.blue {color: #fff;background: #55a5ff;border:none;}
 	}
 	.target_btn {position: fixed;left: 0;bottom: 0;width: 100%;height: 49px;background: #006ee9;color: #fff;text-align: center;line-height: 49px;font-size: 15px;border-top: 1px solid #ccc;}
