--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" href="css/userinfo.css">
-<!-- <link rel="stylesheet" href="css/userinfo_new.css?rev=cc95d111b5676f91270f4c5601b10517"> -->
+<link rel="stylesheet" href="css/userinfo_new.css?rev=sdfsdfsdfsd">
 <div class="userinfo_new"> 
 	<div class="setting">设定被保人资料</div> 
 	<div class=" highest">是否家庭收入主要贡献者</div>
